--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jquery": "^1.11.1",
     "lodash": "^3.10.0",
     "magnific-popup": "^1.0.0",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-router": "^0.13.3"
   }
 }
