--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "watchify": "3.2.3"
   },
   "dependencies": {
+    "classnames": "^2.1.3",
     "component-tip": "^2.4.1",
     "flux": "^2.0.3",
     "jquery": "^1.11.1",
     "lodash": "^3.10.0",
     "magnific-popup": "^1.0.0",
     "react": "^0.13.3",
+    "react-notification": "^2.0.0",
     "react-router": "^0.13.3"
   }
 }
